# momento-buffconf-workshop

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
momento_buffconf_workshop/: __init__.py  candy_demo.py  content.py  math_utils.py  notebook_config.py  plot.py  projection.py  text_utils.py
notebooks/: 00-getting-started.ipynb  01-intro-to-representation-and-search.ipynb  02-data-scraping.ipynb  03-embed-content.ipynb  04-index-content.ipynb  05-query-and-recommend-content.ipynb  06-deploy-with-momento-functions.ipynb
scripts/: bundle-assets.sh  fetch-assets.sh
