[tool.poetry]
name = "momento-buffconf-workshop"
version = "0.1.0"
description = ""
authors = ["Michael Landis <michael@momentohq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.1"
pandas = "^2.3.1"
pyarrow = "^20.0.0"
pandas-stubs = "^2.3.0.250703"
matplotlib = "^3.10.3"
plotly = "^6.2.0"
openai = "^1.95.0"
python-dotenv = "^1.1.1"
tqdm = "^4.67.1"
turbopuffer = "^0.5.12"
scikit-learn = "^1.7.0"
tiktoken = "^0.9.0"
momento = "^1.27.0"


[tool.poetry.group.scraping.dependencies]
langchain-community = "^0.3.27"
feedparser = "^6.0.11"
newspaper3k = "^0.2.8"
listparser = "^0.20"
lxml-html-clean = "^0.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.16.1"
ruff = "^0.12.2"


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
notebook = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
